--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -56,6 +56,7 @@
   {% if feComponents.header %}
     {{ feComponents.header | safe }}
   {% else %}
+    {% include "./header.njk" %}
   {% endif %}
   {{
       serviceHeader({
