document upload test fixed

--- a/server/views/pages/courtAppearance/upload-court-documents.njk
+++ b/server/views/pages/courtAppearance/upload-court-documents.njk
@@ -51,7 +51,8 @@
                     {
                       href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/" + foundDoc.documentUUID + "/delete-document",
                       text: "Delete",
-                      visuallyHiddenText: "document"
+                      visuallyHiddenText: "document",
+                      attributes: { 'data-qa': 'delete-document-button' }
                     }
                   ]
                 }
