RASS-1308 add call to action link when no sentence type (#1004)
* RASS-1308 add call to action link when no sentence type

* fix fallback to legacy sentence type

* test

* refactor

--- a/server/views/pages/offence/edit-offence.njk
+++ b/server/views/pages/offence/edit-offence.njk
@@ -100,7 +100,9 @@
                     text: "Sentence type"
                 },
                     value: {
-                    text: sentenceType | sentenceTypeValueOrLegacy(offence.sentence.legacyData)
+                    text: sentenceType
+                } if sentenceType else {
+                    html: '<a href="/person/' + nomsId + '/' + addOrEditCourtCase + '/' + courtCaseReference  + '/' + addOrEditCourtAppearance + '/' + appearanceReference + '/offences/' + chargeUuid + '/sentence-type?submitToEditOffence=true" data-qa="edit-sentence-type-cta">Enter sentence type</a>'
                 },
                     actions: {
                         items: [{
@@ -110,7 +112,7 @@
                             attributes: {
                                 'data-qa': 'edit-sentence-type-' + chargeUuid
                             }
-                        }]
+                        }] if sentenceType else []
                     }
                 }] )) %}
 
