--- a/server/views/pages/offence/edit-offence.njk
+++ b/server/views/pages/offence/edit-offence.njk
@@ -185,7 +185,7 @@
         } %}
         {% if consecutiveToDetails %}
             {% set consecutiveToValue = {
-                text: consecutiveToDetails | consecutiveToDetailsToDescription | removeTo | capitalize
+                text: consecutiveToDetails | consecutiveToDetailsToDescription | removeTo
             } %}
         {% endif %}
         {% set summaryRows = (summaryRows.concat({
