fix merge conflict

--- a/server/views/pages/offence/edit-offence.njk
+++ b/server/views/pages/offence/edit-offence.njk
@@ -166,7 +166,7 @@
                     text: "Consecutive or concurrent"
                 },
                     value: {
-                    text: offence.sentence.sentenceServeType | capitalize + (consecutiveToDetails | consecutiveToDetailsToDescription if consecutiveToDetails else '')
+                    text: offence.sentence.sentenceServeType | capitalize
                 },
                     actions: {
                         items: [{
