--- a/server/views/pages/courtAppearance/next-hearing-date.njk
+++ b/server/views/pages/courtAppearance/next-hearing-date.njk
@@ -10,7 +10,9 @@
     {{ super() }}
     <form method="post">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-        {% include "../../partials/nextAppearanceCaption.njk" %}
+        {% if addOrEditCourtAppearance == 'add-court-appearance' %}
+          {% include "../../partials/nextAppearanceCaption.njk" %}
+        {% endif %}
 
         {% call govukFieldset({
             legend: {
@@ -19,7 +21,7 @@
                 isPageHeading: true
             }
         }) %}
-            
+
             {{ govukDateInput({
                 id: "next-hearing-date",
                 namePrefix: "nextHearingDate",
