--- a/server/views/pages/courtAppearance/next-hearing-type.njk
+++ b/server/views/pages/courtAppearance/next-hearing-type.njk
@@ -37,7 +37,9 @@
     {{ super() }}
     <form method="post">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-        {% include "../../partials/nextAppearanceCaption.njk" %}
+        {% if addOrEditCourtAppearance == 'add-court-appearance' %}
+          {% include "../../partials/nextAppearanceCaption.njk" %}
+        {% endif %}
         {{ govukRadios(radiosData) }}
 
         <div class="govuk-button-group">
