--- a/server/views/partials/offenceCaption.njk
+++ b/server/views/partials/offenceCaption.njk
@@ -1,5 +1,5 @@
 <span class="govuk-caption-l" data-qa="offences-caption">
-    {% if isAddOffences %}
-        Add offences
-    {% endif %}
+  {% if not submitToEditOffence or submitToEditOffence | length == 0 %}
+    Add offences
+  {% endif %}
 </span>
