--- a/server/views/partials/appearanceCaption.njk
+++ b/server/views/partials/appearanceCaption.njk
@@ -1,3 +1,5 @@
 <span class="govuk-caption-l">
-    Add appearance information
+{% if addOrEditCourtAppearance == 'add-court-appearance' %}
+  Add appearance information
+{% endif %}
 </span>
