--- a/server/views/partials/nextAppearanceCaption.njk
+++ b/server/views/partials/nextAppearanceCaption.njk
@@ -1,3 +1,5 @@
 <span class="govuk-caption-l">
-    Add next court appearance
+{% if addOrEditCourtAppearance == 'add-court-appearance' %}
+  Add next court appearance
+{% endif %}
 </span>
