RASS-1297-captions removed from edit journey pages (#1008)
* RASS-1297-captions removed from edit journey pages

* offence caption condition updated

* removing log

* Update server/routes/offenceRoutes.ts

Co-authored-by: carloveo-moj <144013256+carloveo-moj@users.noreply.github.com>

* caption condition moved to partials

* fixing test

---------

Co-authored-by: carloveo-moj <144013256+carloveo-moj@users.noreply.github.com>

--- a/server/views/partials/offenceCaption.njk
+++ b/server/views/partials/offenceCaption.njk
@@ -1,7 +1,5 @@
 <span class="govuk-caption-l" data-qa="offences-caption">
-    {% if isAddOffences %}
-        Add offences
-    {% else %}
-        Update offence outcomes
-    {% endif %}
+  {% if not submitToEditOffence or submitToEditOffence | length == 0 %}
+    Add offences
+  {% endif %}
 </span>
