--- a/server/views/pages/sentencing/sentence-consecutive-to.njk
+++ b/server/views/pages/sentencing/sentence-consecutive-to.njk
@@ -42,8 +42,8 @@
                                 <input class="govuk-radios__input"
                                        id="consecutiveToSentenceUuid{{ '-' + radioIdIndex if radioIdIndex > 0 else '' }}"
                                        name="consecutiveToSentenceUuid" type="radio"
-                                       {% if sentenceConsecutiveToForm.consecutiveToSentenceUuid == (sentence.sentenceReference + '|SAME') %}checked{% endif %}
-                                       value="{{ sentence.sentenceReference }}|SAME">
+                                       {% if sentenceConsecutiveToForm.consecutiveToSentenceUuid == sentence.sentenceUuid %}checked{% endif %}
+                                       value="{{ sentence.sentenceUuid }}">
                                 <label class="govuk-label govuk-radios__label"
                                        for="consecutiveToSentenceUuid{{ '-' + radioIdIndex if radioIdIndex > 0 else '' }}">
                                     {% if sentence.countNumber and sentence.countNumber !== '-1' %}
@@ -73,7 +73,7 @@
                                         <input class="govuk-radios__input"
                                                id="consecutiveToSentenceUuid{{ '-' + radioIdIndex if radioIdIndex > 0 else '' }}"
                                                name="consecutiveToSentenceUuid" type="radio"
-                                               {% if sentenceConsecutiveToForm.consecutiveToSentenceUuid == (sentence.sentenceUuid + '|OTHER') %}checked{% endif %}
+                                               {% if sentenceConsecutiveToForm.consecutiveToSentenceUuid == sentence.sentenceUuid %}checked{% endif %}
                                                value="{{ sentence.sentenceUuid }}|OTHER">
                                         <label class="govuk-label govuk-radios__label"
                                                for="consecutiveToSentenceUuid{{ '-' + radioIdIndex if radioIdIndex > 0 else '' }}">
